<resources>
    <string name="app_name">LSDZS-Tool</string>
    <string name="prompt_email">Phone</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="refresh">SACN</string>
    <string name="settings">Settings</string>
    <string name="ble_connected">Bluetooth Connected!</string>
    <string name="ble_disconnected">Bluetooth disconnected</string>
    <string name="ble_failed">Bluetooth connect failed</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="permission_des">应用需要获取以下权限来为您提供全部功能：</string>
    <string name="denied_des">您拒绝了某些权限，某些功能将无法使用</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_file">选择文件</string>
    <string name="start_update">开始升级</string>
    <string name="iot_update">IOT升级</string>
    <string name="update">Firmware Update</string>
    <string name="meter_update">仪表升级</string>
    <string name="controller_update">控制器升级</string>
    <string name="gps">gps:</string>
    <string name="pas">pas:</string>
    <string name="speed">speed(km/h):</string>
    <string name="walk_status">walk status:</string>
    <string name="light_status">light status:</string>
    <string name="motor_status">motor status:</string>
    <string name="power">power:</string>
    <string name="brake_status">brake status:</string>
    <string name="soc">soc:</string>
    <string name="error_code">error code:</string>
    <string name="odo">odo:</string>
    <string name="battery_temp">battery temp(℃):</string>
    <string name="voltage">voltage:</string>
    <string name="current">current:</string>
    <string name="controller_temp">controller temp(℃):</string>
    <string name="motor_temp">motor temp(℃):</string>
    <string name="pedal">foot pedal:</string>
    <string name="cadence">cadence:</string>
    <string name="guoyabaohu">over voltage</string>
    <string name="qianyabaohu">under voltage</string>
    <string name="kongzhiqigonglvguansunhuai">over current or mosfet fault</string>
    <string name="duzhuanbaohu">speed feedback</string>
    <string name="dianjihuoerguzhang">hall fault</string>
    <string name="dianjixiangxianguzhang">phase fault</string>
    <string name="zhuanbadianyaguogao">throttle fault</string>
    <string name="guowenbaohu">over temperature,mcu or motor</string>
    <string name="kongzhiqidianyaguzhang">voltage fault</string>
    <string name="yichangzhuliguzhang">abnormal output</string>
    <string name="mcuzijianguzhang">mcu fault</string>
    <string name="feichebaohu">runaway protection</string>
    <string name="tabanzhuanganqiguzhang">assistance sensor fault</string>
    <string name="suduchuanganqiguzhang">speed sensor fault</string>
    <string name="shabaguzhang">brake error</string>
    <string name="unlock_by_4g">remote unlock</string>
    <string name="unlock">unlock(ble)</string>
    <string name="lock_by_4g">remote lock</string>
    <string name="lock">lock(ble)</string>
</resources>