<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@mipmap/ic_back"
                app:title="@string/update" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_8"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout">


            <TextView
                android:id="@+id/tv_meter_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_8"
                android:text="@string/meter_update"
                android:textSize="@dimen/font_20" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darkGray" />

            <TextView
                android:id="@+id/tv_controller_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_8"
                android:text="@string/controller_update"
                android:textSize="@dimen/font_20" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darkGray" />

            <TextView
                android:id="@+id/tv_iot_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_8"
                android:text="@string/iot_update"
                android:textSize="@dimen/font_20" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darkGray" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>