<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@mipmap/ic_back"
                app:title="@string/controller_update" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_8"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_alignParentLeft="true"
                    android:id="@+id/bt_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_file" />
                <EditText
                    android:id="@+id/et_time_split"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:padding="@dimen/spacing_6"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@color/rainbow_green"
                    android:text="15"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_20"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <RadioGroup
                android:visibility="gone"
                android:id="@+id/rg_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_lsh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="lsh"/>
                <RadioButton
                    android:id="@+id/rb_enh"
                    android:layout_marginLeft="@dimen/spacing_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="enh"/>
                <RadioButton
                    android:id="@+id/rb_ech"
                    android:layout_marginLeft="@dimen/spacing_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ech"/>
            </RadioGroup>

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_8"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/font_16" />

            <ProgressBar
                android:id="@+id/pb"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_6"
                android:progress="0"
                android:progressDrawable="@drawable/shouye_progress"
                android:visibility="gone" />

            <Button
                android:id="@+id/bt_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_8"
                android:text="@string/start_update"
                android:visibility="gone" />

            <Chronometer
                android:id="@+id/cm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>